[metadata]
name = ipv4mutate
version = 0.1.1
author = James Bonifield
author_email = bonifield.tools@gmail.com
description = performs various mutations on IPv4 addresses, such as converting to hex, octal, urlencoded, and more
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bonifield/IPv4Mutate
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
